--- a/main/index.html
+++ b/main/index.html
@@ -179,16 +179,20 @@
 			</div>
 			</div>
 			<div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_cb.html">
 				  <img  class="rotate" src="img/icon/student.png" alt="Generic placeholder image">
 				   <h3>Conceitos Básicos</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				</a>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_seq.html">
 				  <img  class="rotate" src="img/icon/sequencial.png" alt="Generic placeholder image">
 				   <h3>Estruturas Sequênciais </h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/condicional.png" alt="Generic placeholder image">
