--- a/main/aula_func.html
+++ b/main/aula_func.html
@@ -109,8 +109,8 @@
 		<div class="container">
 			<div class="col-md-8 col-md-offset-2 text-center wrap_title">
 				<h2>Procedimentos e Funções</h2>
-				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar conceitos básicos de computação
-				para que o aluno possa ter uma base para aprender Algoritmos e Estruturas de Dados.</p>
+				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar ao aluno o conceito de procedimentos e funções 
+				e sua utilização na linguagem C.</p>
 			</div>
 			<div class="col-md-10 col-md-offset-1  wrap_title">
 				<div class="row">
@@ -140,10 +140,10 @@
 						<p align="justify">O código deve estar obrigatoriamente dentro das chaves e funciona como qualquer outro bloco.</p>
 						
 						<h5>Valor de Retorno</h5>
-						<p align="justify">Freqüentemente, uma função faz algum tipo de processamento ou cálculo e precisa retornar o resultado desse procedimento. Em C, isso se chama valor de retorno e pode ser feito com a instrução return. Para poder retornar um valor, precisamos especificar seu tipo (char, int, float, double e variações). Para efetivamente retornar um valor, 
-						usamos a instrução return seguida do valor de retorno, que pode ou não vir entre parênteses. Um exemplo bem simples de função que retorna um valor inteiro:</p>
+						<p align="justify">Freqüentemente, uma função faz algum tipo de processamento ou cálculo e precisa retornar o resultado desse procedimento. Em C, isso se chama valor de retorno e pode ser feito com a instrução <b>return</b>. Para poder retornar um valor, precisamos especificar seu tipo (char, int, float, double e variações). Para efetivamente retornar um valor, 
+						usamos a instrução <b><i>return seguida do valor de retorno</i></b>, que pode ou não vir entre parênteses. Um exemplo bem simples de função que retorna um valor inteiro:</p>
 						<div class="row"><center><img class="img-responsive " src="img/fun/imagem2.PNG" alt="" align="middle"><center></div>
-						<p>O tipo de retorno, além dos tipos normais de variáveis (char, int, float, double e suas variações), pode ser o tipo especial void, que na verdade significa que não há valor de retorno. Um Procedimento é uma função que não retorna nada.</p>
+						<p>O tipo de retorno, além dos tipos normais de variáveis (char, int, float, double e suas variações), pode ser o tipo especial <b>void</b>, que na verdade significa que não há valor de retorno. <b>Um Procedimento é uma função que não retorna nada</b>.</p>
 						<h5>Parâmetros</h5>
 						<p>Como já foi dito, um parâmetro é um valor que é fornecido à função quando ela é chamada. É comum também chamar os parâmetros de argumentos, embora argumento esteja associado ao valor de um parâmetro.</p>
 						<p>Os parâmetros de uma função podem ser acessados da mesma maneira que variáveis locais. Eles na verdade funcionam exatamente como variáveis locais, e modificar um argumento não modifica o valor original no contexto da chamada de função, pois, ao dar um argumento numa chamada de função, ele é copiado como uma variável local da função. 
