--- a/main/aula_mat.html
+++ b/main/aula_mat.html
@@ -109,7 +109,7 @@
 		<div class="container">
 			<div class="col-md-8 col-md-offset-2 text-center wrap_title">
 				<h2>Matrizes</h2>
-				<p class="lead" style="margin-top:0">O objetivo dessa unidade é introduzir o aluno a estrutura condicional. Será feita
+				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar ao aluno o conteúdo relacionado à Matrizes. Será feita
 				uma abordagem focando na linguagem C e também em alguns algoritmos para ajudar na compreensão</p>
 			</div>
 			<div class="col-md-10 col-md-offset-1  wrap_title">
@@ -134,9 +134,10 @@
 						<div class="row"><center><img class="img-responsive " src="img/mat/exemplo1.PNG" alt="" align="middle"><center></div>
 						<h5>Declaração em C</h5>
 						<div class="row"><center><img class="img-responsive " src="img/mat/exemplo2.PNG" alt="" align="middle"><center></div>
-						<p>Na declaração de um mator podemos omitir seu tamanho , desde que quando seja feita a declaração, já sejam atribuídos seus valores, como no exemplo abaixo:</p>
+						<p>Ema ambos os casos declaramos uma matriz de números inteiros (G) de duas linhas e duas colunas, e uma matriz de números reais (num) de três linhas e 4 colunas. Também foram declaradas duas matrizes de caracteres(nome): uma de vinte linhas e dez colunas em C e outra de dez linhas e vinte colunas em pseudocódigo. </p>
+						<p>Na declaração de uma matriz podemos omitir seu tamanho , desde que quando seja feita a declaração, já sejam atribuídos seus valores, como no exemplo abaixo:</p>
 						<div class="row"><center><img class="img-responsive " src="img/mat/exemplo3.PNG" alt="" align="middle"><center></div>
-						<p>Neste caso automaticamente o índice 4 é atribuido ao mator num.</p>
+						<p>Neste caso automaticamente os índices 2 e 4 são atribuidos respectivamente a linha e a coluna da matriz num.</p>
 					</div>
 					<div class="row">
 						<h4>Exemplo de matriz</h4>
@@ -178,10 +179,10 @@
 					<div class="row">
 						<h4>Mostrando os elementos da matriz</h4>
 						<h5>Em pseudocódigo</h5>
-						<p>Utilizamos a estrutura de repetição PARA duas vezes, a primeira vez utilizaremos para percorrer as linhas e a segunda as colunas (não importa se inverter) com isso a matriz será percorrida e a cada iteração o comando ESCREVA mostrará o valor do mator correspondente a posição dos contadores.</p>
+						<p>Utilizamos a estrutura de repetição PARA duas vezes, a primeira vez utilizaremos para percorrer as linhas e a segunda as colunas (não importa se inverter) com isso a matriz será percorrida e a cada iteração o comando ESCREVA mostrará o valor da matriz correspondente a posição dos contadores.</p>
 						<div class="row"><center><img class="img-responsive " src="img/mat/imprimir1.PNG" alt="" align="middle"><center></div>
 						<h5>Em C</h5>
-						<p>Utilizamos a estrutura de repetição FOR duas vezes, a primeira vez utilizaremos para percorrer as linhas e a segunda as colunas (não importa se inverter) com isso a matriz será percorrida e a cada iteração o comando PRINTF mostrará o valor do mator correspondente a posição dos contadores.</p>
+						<p>Utilizamos a estrutura de repetição FOR duas vezes, a primeira vez utilizaremos para percorrer as linhas e a segunda as colunas (não importa se inverter) com isso a matriz será percorrida e a cada iteração o comando PRINTF mostrará o valor da matriz correspondente a posição dos contadores.</p>
 						<div class="row"><center><img class="img-responsive " src="img/mat/imprimir2.PNG" alt="" align="middle"><center></div>
 						<p>Em ambos os casos poderia se fazer um comando de entrada de dados via teclado para cada posição da matriz, porém isso tornaria o código extenso e desprenderia 
 						mais tempo, tornando-se inviável.</p>
@@ -191,7 +192,7 @@
 					<h4>Exemplos</h4>
 					<p>Faça um programa que execute as seguintes etapas:</p>
 					<ul style="list-style-type:circle">
-							<li>Digite 10 números inteiros e os armazene em um mator;</li>
+							<li>Digite 6 números inteiros e os armazene em um mator;</li>
 							<li>Verifique qual desses números é maior;</li>
 							<li>Imprima os elementos do mator e em seguida o seu maior elemento.</li>
 					</ul>
@@ -215,6 +216,29 @@
 			
 			</div>
 				
+		</div>
+	</div>
+	<div id="ex" class="content-section-b" style="border-top: 0">
+		<div class="container">
+
+			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
+				<h2>Exercícios</h2>
+			</div>
+			<center>
+			<div class="row">
+	
+				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
+					<a href="exercicios/lista01.pdf">
+					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
+					  <h3>Download</h3>
+					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Matrizes</p></center>
+					</a>
+				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</div><!-- /.col-lg-4 -->
+				
+			</div><!-- /.row -->
+			
+			
 		</div>
 	</div>
 	
