--- a/main/aula_cond.html
+++ b/main/aula_cond.html
@@ -207,7 +207,7 @@
 					<a href="exercicios/lista01.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
-					  <center><p text-align: center>Dowload lista de exercícios para treinamento Estrutura Condicional</p></center>
+					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Estrutura Condicional</p></center>
 					</a>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
