--- a/main/aula_rep.html
+++ b/main/aula_rep.html
@@ -198,13 +198,26 @@
 					<div class="row"><center><img class="img-responsive " src="img/rep/tabela1.PNG" alt="" align="middle"><center></div>
 					<p>Portanto, nos trechos anteriores, os comandos que se localizam dentro da estrutura de repetição serão repetidos quatro vezes, que foi o período em que x não era maior ou igual à y.</p>
 				</div>
+				<div class="row">
+					<h3>Exemplo</h3>
+					<p>Faça um programa que escreva na tela de 1 até 10, utilizando as 3 estruturas aprendidas nesta aula. </p>
+					<b><p>Pseudocódigo<p></b>
+					<div class="row"><center><img class="img-responsive " src="img/rep/exemplo1a.PNG" alt="" align="middle"><center></div>
+					<b><p>C<p></b>
+					<div class="row"><center><img class="img-responsive " src="img/rep/exemplo1b.PNG" alt="" align="middle"><center></div>
+					<b><p>Saída:<p></b>
+					<div class="row"><center><img class="img-responsive " src="img/rep/exemplo1c.PNG" alt="" align="middle"><center></div>
+				</div>
+				<div class="row">
 					<center>
+					<h3>Vídeo</h3>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/repeticaao.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
 					  Your browser does not support the video tag.
 					</video>
 					</center>
+				</div>
 			</div>
 					
 			<!-- /.col-lg-4 -->
@@ -223,7 +236,7 @@
 			<div class="row">
 	
 				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
-					<a href="exercicios/lista01.pdf">
+					<a href="exercicios/lista03.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
 					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Estrutura de Repetição</p></center>
