--- a/main/aula_vet.html
+++ b/main/aula_vet.html
@@ -191,14 +191,14 @@
 						<h5>Atribuir o valor de todos os elementos de uma só vez</h5>
 						<p>Exceto na declaração do vetor, não é possível atribuir valores a todos os elementos em uma só linha. Cada elemento precisa ser acessado individualmente. Tampouco é possível usar um 
 						único scanf para ler todo o conteúdo do vetor. O código abaixo está, portanto, errado:  </p>
-						<div class="row"><center><img class="img-responsive " src="img/vet/erro1.PNG" alt="" align="middle"><center></div>
+						<div class="row"><center><img class="img-responsive " src="img/vet/erro3.PNG" alt="" align="middle"><center></div>
 						<p>Como vimos acima o correto é utilizar uma estrutura de repetição for para atribuir o valor a cada elemento.</p>
-						<div class="row"><center><img class="img-responsive " src="img/vet/erro2.PNG" alt="" align="middle"><center></div>
+						<div class="row"><center><img class="img-responsive " src="img/vet/erro4.PNG" alt="" align="middle"><center></div>
 						<h5>Copiar vetores</h5>
 						<p>Tampouco é possível copiar o conteúdo de um vetor para um outro, mesmo que os dois sejam de mesmo tamanho e os elementos sejam de mesmo tipo.</p>
-						<div class="row"><center><img class="img-responsive " src="img/vet/erro3.PNG" alt="" align="middle"><center></div>
+						<div class="row"><center><img class="img-responsive " src="img/vet/erro1.PNG" alt="" align="middle"><center></div>
 						<p>O correto é utilizar uma estrutura de repetição for para copiar um elemento de cada vez.</p>
-						<div class="row"><center><img class="img-responsive " src="img/vet/erro4.PNG" alt="" align="middle"><center></div>
+						<div class="row"><center><img class="img-responsive " src="img/vet/erro2.PNG" alt="" align="middle"><center></div>
 					</div>
 					
 				<div class="row">
@@ -334,11 +334,20 @@
 			<center>
 			<div class="row">
 	
-				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
-					<a href="exercicios/lista01.pdf">
+				<div class="col-sm-4 col-sm-offset-2 wow fadeInDown text-center">
+					<a href="exercicios/lista04.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
-					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Vetores</p></center>
+					  <center><p text-align: center>Download lista de exercícios para treinamento de Vetores</p></center>
+					</a>
+				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</div><!-- /.col-lg-4 -->
+				
+				<div class="col-sm-4 wow fadeInDown text-center">
+					<a href="exercicios/lista05.pdf">
+					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
+					  <h3>Download</h3>
+					  <center><p text-align: center>Download lista de exercícios para treinamento de Strings</p></center>
 					</a>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
