--- a/main/index.html
+++ b/main/index.html
@@ -195,52 +195,67 @@
 				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_cond.html">
 				  <img  class="rotate" src="img/icon/condicional.png" alt="Generic placeholder image">
 				   <h3>Estruturas Condicionais</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_rep.html">
 				  <img  class="rotate" src="img/icon/repeticao.png" alt="Generic placeholder image">
 				   <h3>Estruturas de Repetição</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
-				  
+				 </a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_vet.html">
 				  <img  class="rotate" src="img/icon/vetor.png" alt="Generic placeholder image">
 				   <h3>Vetores</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_mat.html">
 				  <img  class="rotate" src="img/icon/matriz.png" alt="Generic placeholder image">
 				   <h3>Matrizes</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_func.html">
 				  <img  class="rotate" src="img/icon/funcao.png" alt="Generic placeholder image">
 				   <h3>Procedimentos e Funções</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_rec.html">
 				  <img  class="rotate" src="img/icon/recursividade.png" alt="Generic placeholder image">
 				   <h3>Recursividade</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_reg.html">
 				  <img  class="rotate" src="img/icon/estrutura.png" alt="Generic placeholder image">
 				   <h3>Registros</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a>
 			 </div>
 			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_pon.html">
 				  <img  class="rotate" src="img/icon/ponteiro.png" alt="Generic placeholder image">
 				   <h3>Ponteiros</h3>
 				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
-				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+				</a	>
+				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 			 </div>
 			 
 		  </div>
