--- a/main/aula_pon.html
+++ b/main/aula_pon.html
@@ -183,6 +183,8 @@
 					
 				</div>
 				<center>
+				<h3>Video Explicativo - Ponteiros 1</h3>
+					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/ponteiros1.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
@@ -253,7 +255,8 @@
 					<p>Quando uma função recebe como parâmetros os endereços e não os valores das variáveis, dizemos que estamos a fazer uma chamada por referência; é o caso desse último exemplo. Quando passamos diretamente os valores das variáveis para uma função, dizemos que é uma chamada por valor; foi o caso do segundo exemplo. </p>
 				</div>
 				<center>
-				<h3>Video</h3>
+				<h3>Video Explicativo - Ponteiros 2</h3>
+					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/ponteiros2.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
@@ -280,7 +283,7 @@
 			<div class="row">
 	
 				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
-					<a href="exercicios/lista01.pdf">
+					<a href="exercicios/lista10.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
 					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Ponteiros</p></center>
