--- a/main/aula_rec.html
+++ b/main/aula_rec.html
@@ -256,7 +256,8 @@ int main(){
 					</div>
 					<div class="row">
 					<center>
-					<h3>Vídeo</h3>
+					<<h3>Video Explicativo - Recursividade</h3>
+					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/recursividade.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
@@ -284,7 +285,7 @@ int main(){
 			<div class="row">
 	
 				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
-					<a href="exercicios/lista01.pdf">
+					<a href="exercicios/lista09.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
 					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Recursividade</p></center>
