--- a/main/aula_rep.html
+++ b/main/aula_rep.html
@@ -210,7 +210,8 @@
 				</div>
 				<div class="row">
 					<center>
-					<h3>Vídeo</h3>
+					<h3>Video Explicativo - Estrutura de Repetição</h3>
+					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/repeticaao.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
