--- a/main/aula_vet.html
+++ b/main/aula_vet.html
@@ -223,9 +223,15 @@
 						
 				
 				</div>
-					<div class="row">
-						<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/tTwvoqSyTPU" frameborder="0" allowfullscreen></iframe></div>
-				</div>
+					<center>
+					<h3>Video Explicativo - Vetores</h3>
+							<p>                                      </p>
+							<video width=80% height="315" class="img-responsive" controls>
+							  <source src="video/vetores.mp4" type="video/mp4">
+							  <source src="movie.ogg" type="video/ogg">
+							  Your browser does not support the video tag.
+							</video>
+					</center>
 				<div class="row">
 					<h3>Strings</h3>
 					<p>Imagine-se na seguinte situação: você precisa escrever um programa que imprima “Linguagem C” na tela. Se pensarmos rapidamente poderíamos resolver declarando 11 variáveis char e preenchendo-as uma por uma.  </p>
