--- a/main/aula_cond.html
+++ b/main/aula_cond.html
@@ -182,16 +182,21 @@
 						<h5>Exemplo</h5>
 						<p>Para exemplificar vamos fazer um programa que mostre o sexo correspondente ao caractere digitado.</p>
 						<div class="row"><center><img class="img-responsive " src="img/cond/exemplo32.PNG" alt="" align="middle"><center></div>
-					</div>
+					</div>	
 				</div>
-			</div>
+				<div class="row">
 			<center>
+			<h3>Video Explicativo - Estrutura Sequencial</h3>
+					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/condicional.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
 					  Your browser does not support the video tag.
 					</video>
-		  </center>
+			</center>
+			</div>
+			</div>
+			
 		</div>
 	</div>
 	<div id="ex" class="content-section-b" style="border-top: 0">
