--- a/main/aula_func.html
+++ b/main/aula_func.html
@@ -95,9 +95,24 @@
 				<ul class="nav navbar-nav">
 					
 					<li class="menuItem"><a href="#whatis">Home</a></li>
-					<li class="menuItem"><a href="#useit">Aulas</a></li>
-					<li class="menuItem"><a href="#credits">Créditos</a></li>
+					<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+					  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Aulas<span class="caret"></span></a>
+					  <ul class="dropdown-menu">
+						<li><a href="aula_cb.html">Conceitos Básicos</a></li>
+						<li><a href="aula_seq.html">Estrutura Sequencial</a></li>
+						<li><a href="aula_cond.html">Estrutura Condicional</a></li>
+						<li><a href="aula_rep.html">Estrutura de Repetição</a></li>
+						<li><a href="aula_rep.html">Matrizes</a></li>
+						<li><a href="aula_vet.html">Vetores</a></li>
+						<li><a href="aula_reg.html">Registros</a></li>
+						<li><a href="aula_rec.html">Recursividade</a></li>
+						<li><a href="aula_pon.html">Ponteiros</a></li>
+						<li role="separator" class="divider"></li>
+					  </ul>
+					</li>
 					<li class="menuItem"><a href="#contact">Contato</a></li>
+					</ul>
 				</ul>
 			</div>
 		   
