--- a/main/index.html
+++ b/main/index.html
@@ -93,7 +93,6 @@
 					
 					<li class="menuItem"><a href="#whatis">Home</a></li>
 					<li class="menuItem"><a href="#useit">Aulas</a></li>
-					<li class="menuItem"><a href="#credits">Créditos</a></li>
 					<li class="menuItem"><a href="#contact">Contato</a></li>
 				</ul>
 			</div>
@@ -173,8 +172,7 @@
             <div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>Aulas</h2>
-				<p class="lead" style="margin-top:0">Recurso Educacional Aberto para o Ensino de 
-				Algoritmos e Estrutura de Dados</p>
+				<center><p class="lead" style="margin-top:0;text-align: center">Clique para escolher a aula desejada</p></center>
 				
 			</div>
 			</div>
