--- a/main/index.html
+++ b/main/index.html
@@ -1,4 +1,3 @@
- <!-- FlatFy Theme - Andrea Galanti /-->
 <!doctype html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
@@ -8,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="Flatfy Free Flat and Responsive HTML5 Template ">
+    <meta name="description" content="Recurso Educacional Aberto para o Ensino de Algoritmos e Estrutura de Dados">
     <meta name="author" content="">
 
     <title>REA-AED - Home</title>
