--- a/main/aula_aloc.html
+++ b/main/aula_aloc.html
@@ -108,6 +108,7 @@
 							<li><a href="aula_func.html">Procedimentos e Funções</a></li>
 							<li><a href="aula_reg.html">Registros</a></li>
 							<li><a href="aula_rec.html">Recursividade</a></li>
+							<li><a href="aula_pon.html">Ponteiros</a></li>
 							<li role="separator" class="divider"></li>
 						  </ul>
 						</li>
@@ -124,7 +125,7 @@
 		<div class="container">
 			<div class="col-md-8 col-md-offset-2 text-center wrap_title">
 				<h2>Alocação Dinâmica de Memória</h2>
-				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar o conteúdo relacionado a ponteiros. Será feita
+				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar o conteúdo relacionado a alocação dinâmica. Será feita
 				uma abordagem focando na linguagem C.</p>
 			</div>
 			<div class="col-md-10 col-md-offset-1  wrap_title">
@@ -191,7 +192,7 @@
 					<p>Ela recebe um ponteiro, o que foi usado para receber o endereço do bloco de memória alocada, e não retorna nada.</p>
 					<p>Ou seja, sua sintaxe é bem simples:</p>
 					<div class="row"><center><img class="img-responsive " src="img/aloc/free1.PNG" alt="" align="middle"><center></div>
-					<p>Para exemplificar vamos fazer um programa resolve um possível problema de alocaçao dentro de looping.  Ele terá uma função que aloca 100 bytes para armazenar inteiros e que após executá-la seja chamada uma função libera que com a utilização de free() liberará o espaço alocado, esse processo deverá acontecer n vezes:</p>
+					<p>Para exemplificar vamos fazer um programa resolve um possível problema de alocaçao dentro de looping.  Ele terá uma função que aloca 1000 bytes para armazenar inteiros e que após executá-la seja chamada uma função libera que com a utilização de free() liberará o espaço alocado, esse processo deverá acontecer n vezes:</p>
 					<div class="row"><center><img class="img-responsive " src="img/aloc/free2.PNG" alt="" align="middle"><center></div>
 				</div>
 				<div class="row">
@@ -214,10 +215,10 @@
 					 <p>Observação: na realocação o espaço alocado também pode ser diminuido.</p>
 				</div>
 				<center>
-				<h3>Video Explicativo - Ponteiros 1</h3>
+				<h3>Video Explicativo - Alocação Dinâmica</h3>
 					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
-					  <source src="video/ponteiros1.mp4" type="video/mp4">
+					  <source src="video/alocacao.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
 					  Your browser does not support the video tag.
 					</video>
@@ -243,7 +244,7 @@
 			<div class="row">
 	
 				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
-					<a href="exercicios/lista10.pdf">
+					<a href="#">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
 					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Ponteiros</p></center>
