--- a/main/index.html
+++ b/main/index.html
@@ -255,6 +255,14 @@
 				</a	>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 			 </div>
+			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_aloc.html">
+				  <img  class="rotate" src="img/icon/aloc1.png" alt="Generic placeholder image">
+				   <h3>Alocação Dinâmica</h3>
+				 <p class="lead">Aprenda a melhorar os seus programas com esse recurso. </p>
+				</a	>
+				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+			 </div>
 			 
 		  </div>
 		   
