--- a/main/aula_arq.html
+++ b/main/aula_arq.html
@@ -214,7 +214,7 @@
 					<p>Arquivo e tela de execução</p>
 					<div class="row"><center><img class="img-responsive " src="img/arq/exemplo4b.PNG" alt="" align="middle"><center></div>
 					<p>Leitura de strings – Função fgets()</p>
-					<p>É utilizada para leitura de strings em um arquivo. Realiza a leitura dos caracteres até o final da linha quando encontra o caracter \n. A leitura é efetuada de tal forma que a string lida é armazenada em um ponteiro do tipo char. A função pode ser finalizada quando encontrar o final do arquivo, neste caso retorna o endereço da string lida. Se ocorrer algum erro na leitura do arquivo, a função retorna NULL.</p>
+					<p>É utilizada para leitura de strings em um arquivo. Realiza a leitura dos caracteres até o final da linha quando encontra o caracter \n ou até que o número de caracteres predefinidos seja atingido (o que ocorrer primeiro). A função também pode ser finalizada quando encontrar o final do arquivo. Quando finaliza ou quando acontece algum erro a função retorna um ponteiro nulo (NULL).</p>
 					<p>Sintaxe:</p>
 					<div class="row"><center><img class="img-responsive " src="img/arq/fgets.PNG" alt="" align="middle"><center></div>
 					<p>Exemplo:</p>
