--- a/main/aula_arq.html
+++ b/main/aula_arq.html
@@ -231,10 +231,10 @@
 				
 				
 				<center>
-				<h3>Video Explicativo - Ponteiros 1</h3>
+				<h3>Video Explicativo - Arquivos</h3>
 					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
-					  <source src="video/ponteiros1.mp4" type="video/mp4">
+					  <source src="video/aula_arquivos.mp4" type="video/mp4">
 					  <source src="movie.ogg" type="video/ogg">
 					  Your browser does not support the video tag.
 					</video>
